Fixes #374: Change text on edits, z-index fix on footer

--- a/opentreemap/treemap/css/sass/partials/_footer.scss
+++ b/opentreemap/treemap/css/sass/partials/_footer.scss
@@ -6,6 +6,7 @@ footer {
     background: #FFF;
     width: 100%;
     bottom: 0;
+    z-index: 99;
 
     &:empty {
         display: none;
